--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -6,6 +6,7 @@
                 color: #fff;
 
                 width: 100%;
+                height: 100%
                 margin: 1px auto;
                 padding: 1px;
             }
@@ -28,12 +29,24 @@
 <div class="outerDiv">
     <div class="leftDiv">
         <div>
-            <img src="static/images/career.png" height="250" width="500">
+            <img src="static/images/career.png" height="372px" width="100%" style="padding: 9px">
         </div>
-        <div>
-            <span style="font-size: 30px; font-weight: bold; font-family: cursive; color: red;">Confused</span>
-            <span style="font-size: 20px; font-family: cursive; font-weight: bold;"> about career choice???</span></br></br>
-            <span style="font-size: 25px; font-family: cursive; font-weight: bold;">Get GUIDANCE from AI</span>
+        <div style="margin-left: 20px">
+            <span style="font-size: 25px; font-weight: bold; font-family: cursive; color: red;">Confused</span>
+            <span style="font-size: 20px; font-family: cursive; font-weight: bold;"> about career choice??? Get GUIDANCE from AI....</span></br></br>
+            <span style="font-size:20px; font-family: monospace; font-weight: bold;">
+                How Career Guidance AI will help you succeed?
+                <div style="font-size: 15px">
+                    <ul>
+                        <li>Tell your skills to AI</li>
+                        <li>Tell your interests to AI</li>
+                        <li>AI will analyze, what other people with same skill and interest are doing</li>
+                        <li>AI will guide you to choose right career path</li>
+                        <li>AI will suggest you courses and certification you may need</li>
+                        <li>Save your time to survey the current trends </li>
+                    </ul>
+                </div>
+            </span>
         </div>
     </div>
     <div class="rightDiv">
@@ -75,5 +88,6 @@
     </div>
     <div style="clear: both;"></div>
 </div>
+
 
 {% endblock %}
