--- a/website/templates/registration.html
+++ b/website/templates/registration.html
@@ -80,7 +80,7 @@
             <div id="myBar" class="w3-green" style="height:24px;width:0"></div>
           </div>
           <br>
-        </div>
+
 
           </form>
         </div>
@@ -242,24 +242,44 @@
                 <div class="form-group">
                     <label for="qualification" style="float:left; font-weight: bolder">Qualification
                             <span style="color:red; font-weight: bolder; margin-right: 10px"> * </span></label>
-                    <select id="qualification" name="qualification" size="1" required>
+                   <!-- <select id="qualification" name="qualification" size="1" required>
                         <OPTION value="">Select</OPTION>
                           {% for j in listofqualification %}
                             <OPTION value="{{ j.qualificationid }}"
                                 {% if RegistrationForm.qualification==j.qualificationid %}selected{% endif %}>{{j.qualificationname}}</OPTION>
                           {% endfor %}
-                    </select>
+                    </select>-->
+                    <input
+                            class="form-control"
+                            id="qualification"
+                            name="qualification"
+                            placeholder="Enter qualification"
+                            required
+                            style="width: 100%; border: 1px solid #b3aaaa"
+                            type="text"
+                            value="{{ RegistrationForm.qualification }}"
+                    />
                 </div>
                 <div class="form-group">
                     <label for="institute" style="float:left; font-weight: bolder">Institute/College
                             <span style="color:red; font-weight: bolder; margin-right: 10px"> * </span></label>
-                    <select id="institute" name="institute" size="1" required>
+                    <!--<select id="institute" name="institute" size="1" required>
                         <OPTION value="">Select</OPTION>
                           {% for j in listofcolleges %}
                                 <OPTION value="{{ j.collegeid }}"
                                     {% if RegistrationForm.institute==j.collegeid %}selected{% endif %}>{{j.collegename}}</OPTION>
                           {% endfor %}
-                    </select>
+                    </select>-->
+                    <input
+                            class="form-control"
+                            id="institute"
+                            name="institute"
+                            placeholder="Enter institute"
+                            required
+                            style="width: 100%; border: 1px solid #b3aaaa"
+                            type="text"
+                            value="{{ RegistrationForm.institute }}"
+                    />
                 </div>
                 <div class="form-group">
                     <label for="yearofcompletion" style="float:left; font-weight: bolder">Year Of Completion
@@ -336,6 +356,18 @@
                             style="width: 100%; border: 1px solid #b3aaaa"
                             type="text"
                             value="{{ RegistrationForm.started }}"
+                    />
+                </div>
+                <div class="form-group">
+                    <label for="skills" style="float:left; font-weight: bolder">Skills</label>
+                    <input
+                            class="form-control"
+                            id="skills"
+                            name="skills"
+                            placeholder="Enter Skills"
+                            style="width: 100%; border: 1px solid #b3aaaa"
+                            type="text"
+                            value="{{ RegistrationForm.skills }}"
                     />
                 </div>
             </div>
