--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -15,20 +15,26 @@
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <title>{% block title %}Home{% endblock %}</title>
+      <style>
+          a:hover{
+            color: chartreuse
+            }
+      </style>
   </head>
-  <body>
+  <body background="/static/images/background1.png">
   <nav class="navbar navbar-inverse navbar-expand-lg navbar-dark" style="background-color: #2a5b8b; height: 60px;">
   <div class="container-fluid">
     <div class="navbar-header">
       <!--<a class="navbar-brand" href="#">
 
       </a>-->
-        <span><img src="/static/images/Logo.png" height="50" width="50"></span>
-        <span style="margin-left: 20px; font-style: italic; font-size: 30px; color: #a9b0da;">AI Based Career Guide</span>
+        <span><img src="/static/images/Logo.png" height="50" width="80"></span>
+        <span style="margin-left: 20px; font-style: italic; font-size: 35px; color: #fff; font-family: Audiowide">AI Based Career Guide</span>
     </div>
 
         <div class="navbar-nav" style="color: #fff; font-size: 18px; padding: 30px; font-style: italic; ">
           {% if user.is_authenticated %}
+            <span style="padding-right: 100px; color: chartreuse">Logged in as : {{current_user.email}}</span>
             {%  if user.registrationCompleted == 'Y' %}
              <span><a class="nav-item" id="home" href="/" style="padding-right: 30px">Home</a>
               <a class="nav-item" id="register" href="/register" style="padding-right: 20px">Registration</a>
