--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -31,7 +31,10 @@
         <div>
             <img src="static/images/career.png" height="372px" width="100%" style="padding: 9px">
         </div>
-        <div style="margin-left: 20px">
+        <div>
+            <img src="static/images/front.png" height="372px" width="167%" style="padding: 9px">
+        </div>
+        <!--<div style="margin-left: 20px">
             <span style="font-size: 25px; font-weight: bold; font-family: cursive; color: red;">Confused</span>
             <span style="font-size: 20px; font-family: cursive; font-weight: bold;"> about career choice??? Get GUIDANCE from AI....</span></br></br>
             <span style="font-size:20px; font-family: monospace; font-weight: bold;">
@@ -47,7 +50,7 @@
                     </ul>
                 </div>
             </span>
-        </div>
+        </div>-->
     </div>
     <div class="rightDiv">
         <form method="POST">
