--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -60,10 +60,13 @@
   overflow: hidden;
   transition: max-height 0.2s ease-out;
 }
-.form-group row{
+.form-group {
     margin: 25px;
+    font-weight: bold;
 }
-
+.col-form-label {
+	width: 50%
+}
 
 </style>
 
@@ -76,7 +79,7 @@
 				<div class="form-group row">
 							<label  class="col-sm-3  col-form-label">Database Fundamentals</label>
 							<div class="col-sm-9">
-							<select class="form-select form-control" required aria-label="select example" name="rate_Database Fundamentals" style="width: 20%">
+							<select class="form-select form-control" required aria-label="select example" name="rate_Database Fundamentals" style="width: 70%">
 								  <option value="">Choose option</option>
 								 <option value="1">Not Interested</option>
 									<option value="2">Poor</option>
@@ -92,7 +95,7 @@
 				<div class="form-group row">
 							<label  class="col-sm-3  col-form-label">Computer Architecture</label>
 							<div class="col-sm-9">
-							 <select class="form-select form-control" required aria-label="select example" name="rate_Computer Architecture" style="width: 20%">
+							 <select class="form-select form-control" required aria-label="select example" name="rate_Computer Architecture" style="width: 70%">
 							        <option value="">Choose option</option>
 									<option value="1">Not Interested</option>
 									<option value="2">Poor</option>
@@ -107,7 +110,7 @@
 				<div class="form-group row">
 							<label  class="col-sm-3  col-form-label">Distributed Computing Systems</label>
 							<div class="col-sm-9">
-							 <select class="form-select form-control" required aria-label="select example" name="rate_Distributed Computing Systems" style="width: 20%">
+							 <select class="form-select form-control" required aria-label="select example" name="rate_Distributed Computing Systems" style="width: 70%">
 							        <option value="">Choose option</option>
 									<option value="1">Not Interested</option>
 									<option value="2">Poor</option>
@@ -122,7 +125,7 @@
 				<div class="form-group row">
 							<label  class="col-sm-3  col-form-label">Cyber Security</label>
 							<div class="col-sm-9">
-							 <select class="form-select form-control" required aria-label="select example" name="rate_Cyber Security" style="width: 20%">
+							 <select class="form-select form-control" required aria-label="select example" name="rate_Cyber Security" style="width: 70%">
 							        <option value="" >Choose option</option>
 									<option value="1">Not Interested</option>
 									<option value="2">Poor</option>
@@ -137,7 +140,7 @@
 				<div class="form-group row">
 							<label  class="col-sm-3  col-form-label">Computer Networking</label>
 							<div class="col-sm-9">
-							 <select class="form-select form-control" required aria-label="select example" name="rate_Networking" style="width: 20%">
+							 <select class="form-select form-control" required aria-label="select example" name="rate_Networking" style="width: 70%">
 							        <option value="">Choose option</option>
 									<option value="1">Not Interested</option>
 									<option value="2">Poor</option>
@@ -152,7 +155,7 @@
 				<div class="form-group row">
 							<label  class="col-sm-3  col-form-label">Software Development</label>
 							<div class="col-sm-9">
-							 <select class="form-select form-control" required aria-label="select example" name="rate_Development" style="width: 20%">
+							 <select class="form-select form-control" required aria-label="select example" name="rate_Development" style="width: 70%">
 							        <option value="">Choose option</option>
 									<option value="1">Not Interested</option>
 									<option value="2">Poor</option>
@@ -167,7 +170,7 @@
 				<div class="form-group row">
 							<label  class="col-sm-3  col-form-label">Programming Skills</label>
 							<div class="col-sm-9">
-							 <select class="form-select form-control" required aria-label="select example" name="rate_Programming Skills" style="width: 20%">
+							 <select class="form-select form-control" required aria-label="select example" name="rate_Programming Skills" style="width: 70%">
 							        <option value="">Choose option</option>
 									<option value="1">Not Interested</option>
 									<option value="2">Poor</option>
@@ -182,7 +185,7 @@
 				<div class="form-group row">
 							<label  class="col-sm-3  col-form-label">Project Management</label>
 							<div class="col-sm-9">
-							 <select class="form-select form-control" required aria-label="select example" name="rate_Project Management" style="width: 20%">
+							 <select class="form-select form-control" required aria-label="select example" name="rate_Project Management" style="width: 70%">
 							        <option value="">Choose option</option>
 									<option value="1">Not Interested</option>
 									<option value="2">Poor</option>
@@ -197,7 +200,7 @@
 				<div class="form-group row">
 							<label  class="col-sm-3  col-form-label">Computer Forensics Fundamentals</label>
 							<div class="col-sm-9">
-							 <select class="form-select form-control" required aria-label="select example" name="rate_Computer Forensics Fundamentals" style="width: 20%">
+							 <select class="form-select form-control" required aria-label="select example" name="rate_Computer Forensics Fundamentals" style="width: 70%">
 							        <option value="">Choose option</option>
 									<option value="1">Not Interested</option>
 									<option value="2">Poor</option>
@@ -212,7 +215,7 @@
 				<div class="form-group row">
 							<label  class="col-sm-3  col-form-label">Technical Communication skills</label>
 							<div class="col-sm-9">
-							 <select class="form-select form-control" required aria-label="select example" name="rate_Technical Communication" style="width: 20%">
+							 <select class="form-select form-control" required aria-label="select example" name="rate_Technical Communication" style="width: 70%">
 							        <option value="">Choose option</option>
 									<option value="1">Not Interested</option>
 									<option value="2">Poor</option>
@@ -227,7 +230,7 @@
 				<div class="form-group row">
 							<label  class="col-sm-3  col-form-label">AI ML</label>
 							<div class="col-sm-9">
-							 <select class="form-select form-control" required aria-label="select example" name="rate_AI ML" style="width: 20%">
+							 <select class="form-select form-control" required aria-label="select example" name="rate_AI ML" style="width: 70%">
 							        <option value="">Choose option</option>
 									<option value="1">Not Interested</option>
 									<option value="2">Poor</option>
@@ -242,7 +245,7 @@
 				<div class="form-group row">
 							<label  class="col-sm-3  col-form-label">Software Engineering</label>
 							<div class="col-sm-9">
-							 <select class="form-select form-control" required aria-label="select example" name="rate_se" style="width: 20%">
+							 <select class="form-select form-control" required aria-label="select example" name="rate_se" style="width: 70%">
 							        <option value="">Choose option</option>
 									<option value="1">Not Interested</option>
 									<option value="2">Poor</option>
@@ -257,7 +260,7 @@
 				<div class="form-group row">
 							<label  class="col-sm-3  col-form-label">Business Analysis</label>
 							<div class="col-sm-9">
-							 <select class="form-select form-control" required aria-label="select example" name="rate_Business Analysis" style="width: 20%">
+							 <select class="form-select form-control" required aria-label="select example" name="rate_Business Analysis" style="width: 70%">
 							        <option disabled= "disabled" selected="selected">Choose option</option>
 									<option value="1">Not Interested</option>
 									<option value="2">Poor</option>
@@ -272,7 +275,7 @@
 				<div class="form-group row">
 							<label  class="col-sm-3  col-form-label">Communication skills</label>
 							<div class="col-sm-9">
-							 <select class="form-select form-control" required aria-label="select example" name="rate_Communication skills" style="width: 20%">
+							 <select class="form-select form-control" required aria-label="select example" name="rate_Communication skills" style="width: 70%">
 							        <option value="">Choose option</option>
 									<option value="1">Not Interested</option>
 									<option value="2">Poor</option>
@@ -287,7 +290,7 @@
 				<div class="form-group row">
 							<label  class="col-sm-3 col-form-label">Data Science</label>
 							<div class="col-sm-9">
-							 <select class="form-select form-control" required aria-label="select example" name="rate_Data Science" style="width: 20%">
+							 <select class="form-select form-control" required aria-label="select example" name="rate_Data Science" style="width: 70%">
 							        <option value="">Choose option</option>
 									<option value="1">Not Interested</option>
 									<option value="2">Poor</option>
@@ -302,7 +305,7 @@
 				<div class="form-group row">
 							<label  class="col-sm-3  col-form-label">Troubleshooting skills</label>
 							<div class="col-sm-9">
-							 <select  class="form-control" name="rate_Troubleshooting skills" style="width: 20%">
+							 <select  class="form-control" name="rate_Troubleshooting skills" style="width: 70%">
 							        <option value="">Choose option</option>
 									<option value="1">Not Interested</option>
 									<option value="2">Poor</option>
@@ -318,7 +321,7 @@
 				<div class="form-group row">
 							<label  class="col-sm-3  col-form-label">Graphics Designing</label>
 							<div class="col-sm-9">
-							 <select  class="form-control" name="rate" style="width: 20%">
+							 <select  class="form-control" name="rate" style="width: 70%">
 							        <option value="">Choose option</option>
 									<option value="1">Not Interested</option>
 									<option value="2">Poor</option>
